k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: quarkus-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quarkus-app
                port:
                  number: 80
